Fixed table alignment

--- a/style.css
+++ b/style.css
@@ -19,57 +19,35 @@ h2{
     font-size: 36px;
     font-weight: 600;
   }
-  td.pinkStrong {
-    color: #bc1f7d;
-    vertical-align: middle;
-    font-size: 12.5pt;
-    line-height: 1.95em;
-    letter-spacing: 0.025em;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-} 
-p{ 
-    font-size: 100px;
-    font-family: Arial, Helvetica, sans-serif; 
-
-}
-td {
-    color: #000000;
-    vertical-align: middle;
-    font-size: 13pt;
-    line-height: 1.75em;
-    letter-spacing: 0.025em;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    font-family: Arial, Helvetica, sans-serif;
-}  
-table {
+  .info-table {
+    margin: 0 auto;
     border-collapse: collapse;
-    border-spacing: 0;
-    text-indent: initial;
+    text-align: left; 
+    width: 30%; /* lapit ng cells sa isa't-isa */
+  }
+  
+  .info-table td {
+    padding: 10px;
+  }
+  
+  .info-table .pinkStrong {
+    color: #bc1f7d;
+    font-weight: bold;
+  }
+  
+  .text-box {
     text-align: center;
-}
-.text-box img {
-    max-width: 40%;
-    width: auto;
-    height: auto;
-    max-height: 50vh;
-    box-shadow: -15px 10px black;
-}
-.text-box h1{
+  }
+  
+  .text-box h1 {
     font-size: 36px;
     font-weight: 600;
-}
-.text-box p{
-    display: block;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
+  }
+  
+  .text-box p {
     font-size: 18px;
     line-height: 1.5;
     color: black;
     font-weight: 700;
-}
+  }
+  
